Initial commit winbase, winnt, cfapi