@@ -38,8 +38,8 @@
 
         <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
         <maven-jar-plugin.version>3.2.0</maven-jar-plugin.version>
-        <maven-source-plugin.version>3.0.1</maven-source-plugin.version>
-        <maven-javadoc-plugin.version>3.0.1</maven-javadoc-plugin.version>
+        <maven-source-plugin.version>3.2.0</maven-source-plugin.version>
+        <maven-javadoc-plugin.version>3.2.0</maven-javadoc-plugin.version>
     </properties>
 	
 	<modules>
@@ -115,7 +115,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
 				<configuration>
-					<additionalOptions>
+                    <release>${maven.compiler.target}</release>
+                    <additionalOptions>
+                        <option>--enable-preview</option>
 						<option>--add-modules</option>
 						<option>jdk.incubator.foreign</option>
 					</additionalOptions>
